--- a/ARTICLE2/sample.bib
+++ b/ARTICLE2/sample.bib
@@ -1,4 +1,57 @@
 
+
+@misc{EU_context,
+  key = {C2024-5041},
+  journal = {},
+  number = {},
+  title = {Communication from the Commission: Guidance on Article 20a on sector integration of renewable electricity of Directive (EU)
+2018/2001 on the promotion of energy from renewable sources, as amended by Directive
+(EU) 2023/2413},
+  url = {https://energy.ec.europa.eu/document/download/efcd200c-b9ae-4a9c-98ab-73b2fd281fcc_en?filename=C_2024_5041_1_EN_ACT_part1_v10.pdf},
+  year = {2024}
+}
+
+@article{INTRO_blanco,
+title = {A review at the role of storage in energy systems with a focus on Power to Gas and long-term storage},
+journal = {Renewable and Sustainable Energy Reviews},
+volume = {81},
+pages = {1049-1086},
+year = {2018},
+issn = {1364-0321},
+doi = {https://doi.org/10.1016/j.rser.2017.07.062},
+url = {https://www.sciencedirect.com/science/article/pii/S1364032117311310},
+author = {Herib Blanco and André Faaij},
+keywords = {Energy storage, Energy modeling, Flexibility, Power to Gas},
+abstract = {A review of more than 60 studies (plus m4ore than 65 studies on P2G) on power and energy models based on simulation and optimization was done. Based on these, for power systems with up to 95% renewables, the electricity storage size is found to be below 1.5% of the annual demand (in energy terms). While for 100% renewables energy systems (power, heat, mobility), it can remain below 6% of the annual energy demand. Combination of sectors and diverting the electricity to another sector can play a large role in reducing the storage size. From the potential alternatives to satisfy this demand, pumped hydro storage (PHS) global potential is not enough and new technologies with a higher energy density are needed. Hydrogen, with more than 250 times the energy density of PHS is a potential option to satisfy the storage need. However, changes needed in infrastructure to deal with high hydrogen content and the suitability of salt caverns for its storage can pose limitations for this technology. Power to Gas (P2G) arises as possible alternative overcoming both the facilities and the energy density issues. The global storage requirement would represent only 2% of the global annual natural gas production or 10% of the gas storage facilities (in energy equivalent). The more options considered to deal with intermittent sources, the lower the storage requirement will be. Therefore, future studies aiming to quantify storage needs should focus on the entire energy system including technology vectors (e.g. Power to Heat, Liquid, Gas, Chemicals) to avoid overestimating the amount of storage needed.}
+}
+
+@article{INTRO_parra,
+title = {A review on the role, cost and value of hydrogen energy systems for deep decarbonisation},
+journal = {Renewable and Sustainable Energy Reviews},
+volume = {101},
+pages = {279-294},
+year = {2019},
+issn = {1364-0321},
+doi = {https://doi.org/10.1016/j.rser.2018.11.010},
+url = {https://www.sciencedirect.com/science/article/pii/S1364032118307421},
+author = {David Parra and Luis Valverde and F. Javier Pino and Martin K. Patel},
+keywords = {Hydrogen, Renewable energy, Energy storage, Power-to-gas, Hydrogen refuelling, Smart grid},
+abstract = {Hydrogen technologies can play an important role in decarbonising our energy system in a variety of ways across the energy value chain. It is therefore critical to identify the strategic roles as well as the conditions under which hydrogen energy systems become attractive for the energy transition. In this paper, the authors present a techno-economic review of hydrogen energy systems including power-to-power, power-to-gas, hydrogen refuelling and stationary fuel cells. We focus on their optimal operation as flexible assets and we identify three actions that can foster their uptake beyond technological progress. First, we recommend optimal electricity supply with dedicated control strategies considering that electricity dominates the levelised cost of hydrogen production via electrolysis. Secondly, hydrogen can enable the further integration of traditionally independent sectors, namely electricity, heat and transport while contributing to decarbonise all. This position can also be advantageous for investors who sell heat and fuels as energy efficient products. Lastly, we examine a whole range of revenues from different products and applications which can be combined (i.e. benefit stacking) to match capital and operational expenditures. We discuss these roles in depth and we conclude that policy makers together with technology developers should elaborate smart strategies to reduce cost by scaling production, stimulate standardisation (e.g., similar to the PV industry) as well as develop new market structures and regulatory frameworks which allow hydrogen technologies to deliver multiple low carbon applications and products.}
+}
+
+@article{review_math_opt,
+  author={Michal Jasinski and Arsalan Najafi and et al},
+  title = {Operation and Planning of Energy Hubs Under Uncertainty - A Review of Mathematical Optimization Approaches},
+  year = {2022},
+  journal = {\textcolor{red}{some journal}}
+}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+
+
 @INPROCEEDINGS{Horsch,
   author={Hörsch, Jonas and Brown, Tom},
   booktitle={2017 14th International Conference on the European Energy Market (EEM)}, 
@@ -46,7 +99,7 @@ abstract = {Energy system models play an important role in evaluating potential 
 title = {European Hydrogen Market Landscape - November 2023 Report},
 journal = {European Journal of Operational Research},
 volume = {},
-number = {1},
+number = {},
 pages = {},
 year = {2023},
 doi = {},
@@ -55,24 +108,6 @@ author = {European Hydrogen Observatory},
 keywords = {},
 abstract = {}
 }
-
-@misc{EU_context,
-  author = {European Commission},
-  journal = {},
-  number = {},
-  title = {Communication from the Commission: Guidance on Article 20a on sector integration of renewable electricity of Directive (EU)
-2018/2001 on the promotion of energy from renewable sources, as amended by Directive
-(EU) 2023/2413},
-  url = {https://energy.ec.europa.eu/document/download/efcd200c-b9ae-4a9c-98ab-73b2fd281fcc_en?filename=C_2024_5041_1_EN_ACT_part1_v10.pdf},
-  year = {2024}
-}
-
-@article{review_math_opt,
-  author={Michal Jasinski, Arsalan Najafi, et al},
-  title = {Operation and Planning of Energy Hubs Under Uncertainty - A Review of Mathematical Optimization Approaches},
-  year = {2022}
-}
-
 
 @misc{MOPTA,
   author       = {Riccardi, Morgari},
@@ -144,35 +179,11 @@ abstract = {Mathematical optimization problems including a time dimension abound
   year={2020},
   pages={1-5},
   keywords={Costs;Europe;Optimization;System analysis and design;Periodic structures},
-  doi={10.1109/EEM49802.2020.9221934}}
-
-@article{INTRO_blanco,
-title = {A review at the role of storage in energy systems with a focus on Power to Gas and long-term storage},
-journal = {Renewable and Sustainable Energy Reviews},
-volume = {81},
-pages = {1049-1086},
-year = {2018},
-issn = {1364-0321},
-doi = {https://doi.org/10.1016/j.rser.2017.07.062},
-url = {https://www.sciencedirect.com/science/article/pii/S1364032117311310},
-author = {Herib Blanco and André Faaij},
-keywords = {Energy storage, Energy modeling, Flexibility, Power to Gas},
-abstract = {A review of more than 60 studies (plus m4ore than 65 studies on P2G) on power and energy models based on simulation and optimization was done. Based on these, for power systems with up to 95% renewables, the electricity storage size is found to be below 1.5% of the annual demand (in energy terms). While for 100% renewables energy systems (power, heat, mobility), it can remain below 6% of the annual energy demand. Combination of sectors and diverting the electricity to another sector can play a large role in reducing the storage size. From the potential alternatives to satisfy this demand, pumped hydro storage (PHS) global potential is not enough and new technologies with a higher energy density are needed. Hydrogen, with more than 250 times the energy density of PHS is a potential option to satisfy the storage need. However, changes needed in infrastructure to deal with high hydrogen content and the suitability of salt caverns for its storage can pose limitations for this technology. Power to Gas (P2G) arises as possible alternative overcoming both the facilities and the energy density issues. The global storage requirement would represent only 2% of the global annual natural gas production or 10% of the gas storage facilities (in energy equivalent). The more options considered to deal with intermittent sources, the lower the storage requirement will be. Therefore, future studies aiming to quantify storage needs should focus on the entire energy system including technology vectors (e.g. Power to Heat, Liquid, Gas, Chemicals) to avoid overestimating the amount of storage needed.}
+  doi={10.1109/EEM49802.2020.9221934},
+  journal = {\textcolor{red}{some journal}}
 }
 
-@article{INTRO_parra,
-title = {A review on the role, cost and value of hydrogen energy systems for deep decarbonisation},
-journal = {Renewable and Sustainable Energy Reviews},
-volume = {101},
-pages = {279-294},
-year = {2019},
-issn = {1364-0321},
-doi = {https://doi.org/10.1016/j.rser.2018.11.010},
-url = {https://www.sciencedirect.com/science/article/pii/S1364032118307421},
-author = {David Parra and Luis Valverde and F. Javier Pino and Martin K. Patel},
-keywords = {Hydrogen, Renewable energy, Energy storage, Power-to-gas, Hydrogen refuelling, Smart grid},
-abstract = {Hydrogen technologies can play an important role in decarbonising our energy system in a variety of ways across the energy value chain. It is therefore critical to identify the strategic roles as well as the conditions under which hydrogen energy systems become attractive for the energy transition. In this paper, the authors present a techno-economic review of hydrogen energy systems including power-to-power, power-to-gas, hydrogen refuelling and stationary fuel cells. We focus on their optimal operation as flexible assets and we identify three actions that can foster their uptake beyond technological progress. First, we recommend optimal electricity supply with dedicated control strategies considering that electricity dominates the levelised cost of hydrogen production via electrolysis. Secondly, hydrogen can enable the further integration of traditionally independent sectors, namely electricity, heat and transport while contributing to decarbonise all. This position can also be advantageous for investors who sell heat and fuels as energy efficient products. Lastly, we examine a whole range of revenues from different products and applications which can be combined (i.e. benefit stacking) to match capital and operational expenditures. We discuss these roles in depth and we conclude that policy makers together with technology developers should elaborate smart strategies to reduce cost by scaling production, stimulate standardisation (e.g., similar to the PV industry) as well as develop new market structures and regulatory frameworks which allow hydrogen technologies to deliver multiple low carbon applications and products.}
-}
+
 @article{INTRO_short-term,
 title = {Short term decisions for long term problems – The effect of foresight on model based energy systems analysis},
 journal = {Energy},
@@ -227,6 +238,7 @@ keywords = {Hydrogen square, Hydrogen production, Hydrogen economy, Hydrogen cle
 @misc{entsoe_NTC,
   title = {ENTSO-E Power Statistics and Transparency Platform},
   year = {2024},
+  key = {ENTSO-E},
   url = {https://transparency.entsoe.eu/transmission-domain/physicalFlow/show?name=&defaultValue=false&viewType=TABLE&areaType=BORDER_CTY&atch=false&dateTime.dateTime=22.07.2024+00:00|CET|DAY&border.values=CTY|10YGR-HTSO-----Y!CTY_CTY|10YGR-HTSO-----Y_CTY_CTY|10YIT-GRTN-----B&dateTime.timezone=CET_CEST&dateTime.timezone_input=CET+(UTC+1)+/+CEST+(UTC+2)},
   note = {Statistical Reports. Data is published based on aggregations of Transparency Platform data, complying with the Transparency regulation as described in the Detailed Data Description document.}
 }
@@ -234,6 +246,7 @@ keywords = {Hydrogen square, Hydrogen production, Hydrogen economy, Hydrogen cle
 @misc{ENTSOE_PowerStats,
   title = {ENTSO-E Power Statistics and Transparency Platform - Cross-Border Physical Flow},
   year = {2024},
+  key = {ENTSO-E},
   url = {https://www.entsoe.eu/data/power-stats/},
   note = {Statistical Reports. Data is published based on aggregations of Transparency Platform data, complying with the Transparency regulation as described in the Detailed Data Description document.}
 }
