--- a/ARTICLE2/template.tex
+++ b/ARTICLE2/template.tex
@@ -1,4 +1,4 @@
-%%%%%%%%%%%%%%%%%%%%%%% file template.tex %%%%%%%%%%%%%%%%%%%%%%%%%
+
 %
 % This is a general template file for the LaTeX package SVJour3
 % for Springer journals.          Springer Heidelberg 2010/09/16
@@ -15,32 +15,13 @@
 % First comes an example EPS file -- just ignore it and
 % proceed on the \documentclass line
 % your LaTeX will extract the file if required
-\begin{filecontents*}{example.eps}
-%!PS-Adobe-3.0 EPSF-3.0
-%%BoundingBox: 19 19 221 221
-%%CreationDate: Mon Sep 29 1997
-%%Creator: programmed by hand (JK)
-%%EndComments
-gsave
-newpath
-  20 20 moveto
-  20 220 lineto
-  220 220 lineto
-  220 20 lineto
-closepath
-2 setlinewidth
-gsave
-  .4 setgray fill
-grestore
-stroke
-grestore
-\end{filecontents*}
+
 %
 \RequirePackage{fix-cm}
 %
 %\documentclass{svjour3}                     % onecolumn (standard format)
 %\documentclass[smallcondensed]{svjour3}     % onecolumn (ditto)
-\documentclass[smallextended]{svjour3}       % onecolumn (second format)
+\documentclass[smallextended,natbib]{svjour3}       % onecolumn (second format)
 %\documentclass[twocolumn]{svjour3}          % twocolumn
 %
 \smartqed  % flush right qed marks, e.g. at end of proof
@@ -257,27 +238,27 @@ grestore
 
 The threat of climate change is pushing policy-makers to pursue greater integration of renewable energy sources into
  electrical grids, while at the same time ensuring reliability and resilience through digital optimization of electric 
- power distribution and transmission in smart grids \textcolor{green}{\cite{EU_context}}. 
+ power distribution and transmission in smart grids \textcolor{Green}{\citep{EU_context}}. 
 One of the main difficulties arising when designing an electric power system relying on renewables is the great variability
  of the generation of electricity through wind and solar, since these resources are highly dependent on weather conditions. 
 To deal with this variability, a possible solution gaining a lot of traction in recent years is the introduction of an energy
  storage system relying on hydrogen, converting energy from hydrogen to electricity and vice versa in fuel cells and 
- elecrolyzers \textcolor{green}{\cite{INTRO_blanco}, \cite{INTRO_parra}}. 
+ elecrolyzers \citep{INTRO_blanco}, \citep{INTRO_parra}. 
 It is of interest to evaluate the optimal solution, in terms of investment plan, to supply the grid along with industrial
  hydrogen demand in a dependable way. 
 The stochastic nature of the problem though makes it impossible to plan long-term by optimizing on forecasts, and requires
  a statistical approach to ensure a robust model.
 
 Up to now, common approaches have adopted Stochastic Programming (SP) or Robust Optimization (RO) models, along with hybrid
- models involving Information Gap Decision Theory or Chance Constraint \textcolor{green}{\cite{review_math_opt}}. 
+ models involving Information Gap Decision Theory or Chance Constraint \citep{review_math_opt}. 
 While initially favored, the SP approach comes with high computational burden, so RO models have seen more popularity 
 in recent years, despite the drawback of being conservative methods with higher average cost of operation and planning of energy systems.
 
 In the typical setting, the problem to solve is a Capacity Expansion Problem (CEP) regarding infrastructure investments:
  solar and wind farms, fuel cells, hydrolizers, grid upgrades to augment Net Transfer Capacity (NTC) and so on. 
 Nested within the CEP is an Economic Dispatch (ED) problem concerning the operational costs of said infrastructure. 
-The problem is well suited to be modelled through mixed integer linear programming (MILP), as is explained in detail in 
-\textcolor{green}{\cite{INTRO_isolated_MIP}} and \textcolor{green}{[?]}.%\textcolor{green}{\cite{Dagdougui}}. 
+The problem is well suited to be modelled through mixed integer linear programming (MILP), as is explained in detail for example in 
+\citet{INTRO_isolated_MIP}.%} and \textcolor{green}{[?]}.%\textcolor{green}{\cite{Dagdougui}}. 
 
 The CEP for investment planning requires to look at long time horizons, and on the other hand intra-day variability in generation is the main complexity driver for the ED problem, so the time horizon must be modelled by a large quantity of fairly tight time steps. 
 Furthermore, Large scale grids can be modelled with various degrees of spacial aggregation, as is explored in \textcolor{green}{\cite{Horsch}} and \textcolor{green}{\cite{BIENER2020106349}}, and problem size increases more than linearly with the number of nodes.
@@ -1239,8 +1220,8 @@ In future work, we plan to relax the conditions in Proposition \ref{prop rho} fo
 
 
 % BibTeX users please use one of
-%\bibliographystyle{spbasic}      % basic style, author-year citations
-\bibliographystyle{spmpsci} % mathematics and physical sciences
+\bibliographystyle{spbasic}      % basic style, author-year citations
+%\bibliographystyle{spmpsci} % mathematics and physical sciences
 %\bibliographystyle{spphys}       % APS-like style for physics
 \bibliography{sample}   % name your BibTeX data base
 
