--- a/ARTICLE2/template.tex
+++ b/ARTICLE2/template.tex
@@ -21,7 +21,7 @@
 %
 %\documentclass{svjour3}                     % onecolumn (standard format)
 %\documentclass[smallcondensed]{svjour3}     % onecolumn (ditto)
-\documentclass[smallextended,natbib, draft]{svjour3}       % onecolumn (second format)
+\documentclass[smallextended,natbib]{svjour3}       % onecolumn (second format)
 %\documentclass[twocolumn]{svjour3}          % twocolumn
 %
 \smartqed  % flush right qed marks, e.g. at end of proof
@@ -1159,7 +1159,7 @@ Figure \ref{fig:opt_time_over_iter} shows the optimization time across iteration
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width=0.5\textwidth]{example-image-b}%{images/iter_time_over_iter.png}
+  \includegraphics[width=0.5\textwidth]{images/opt_time_rho_vs_val.png}%{images/iter_time_over_iter.png}
   \caption{Iteration time over iterations.}
   \label{fig:iter_time_over_iter}
 \end{figure}
