--- a/ARTICLE2/template.tex
+++ b/ARTICLE2/template.tex
@@ -1159,7 +1159,7 @@ Figure \ref{fig:opt_time_over_iter} shows the optimization time across iteration
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width=0.5\textwidth]{images/opt_time_rho_vs_val.png}%{images/iter_time_over_iter.png}
+  \includegraphics[width=\textwidth]{images/iter_time_over_iter.png}%{images/iter_time_over_iter.png}
   \caption{Iteration time over iterations.}
   \label{fig:iter_time_over_iter}
 \end{figure}
