aggiustatine con ChatGPT

--- a/ARTICLE2/sample.bib
+++ b/ARTICLE2/sample.bib
@@ -129,6 +129,7 @@ abstract = {Mathematical optimization problems including a time dimension abound
 
 @inproceedings{papero_bin,
 author = {Kirschbaum, Stefan and Powilleit, Marion and Schotte, Merlind and Özbeg, Furkan},
+booktitle = {\textcolor{red}{to insert}},
 year = {2023},
 month = {01},
 pages = {2774-2785},
