--- a/ARTICLE2/sample.bib
+++ b/ARTICLE2/sample.bib
@@ -129,7 +129,7 @@ abstract = {Mathematical optimization problems including a time dimension abound
 
 @inproceedings{papero_bin,
 author = {Kirschbaum, Stefan and Powilleit, Marion and Schotte, Merlind and Özbeg, Furkan},
-booktitle = {\textcolor{red}{to insert}},
+journal = {36th International Conference on Efficiency, Cost, Optimization, Simulation and Environmental Impact of Energy Systems (ECOS 2023)},
 year = {2023},
 month = {01},
 pages = {2774-2785},
@@ -203,8 +203,7 @@ keywords = {Energy hub, Distributed energy systems, Temporal resolution, Rolling
   title = {ENTSO-E Power Statistics and Transparency Platform - Cross-Border Physical Flow},
   year = {2024},
   key = {Entso-e Power Statistics and Transparency Platform},
-  url = {https://transparency.entsoe.eu/transmission-domain/physicalFlow/show?name=&defaultValue=false&viewType=TABLE&areaType=BORDER_CTY&atch=false&dateTime.dateTime=22.07.2024+00:00|CET|DAY&border.values=CTY|10YGR-HTSO-----Y!CTY_CTY|10YGR-HTSO-----Y_CTY_CTY|10YIT-GRTN-----B&dateTime.timezone=CET_CEST&dateTime.timezone_input=CET+(UTC+1)+/+CEST+(UTC+2)},
-  note = {Statistical Reports. Data is published based on aggregations of Transparency Platform data, complying with the Transparency regulation as described in the Detailed Data Description document.}
+  url = {https://transparency.entsoe.eu/transmission-domain/physicalFlow/show?name=&defaultValue=false&viewType=TABLE&areaType=BORDER_CTY&atch=false&dateTime.dateTime=22.07.2024+00:00|CET|DAY&border.values=CTY|10YGR-HTSO-----Y!CTY_CTY|10YGR-HTSO-----Y_CTY_CTY|10YIT-GRTN-----B&dateTime.timezone=CET_CEST&dateTime.timezone_input=CET+(UTC+1)+/+CEST+(UTC+2)}
 }
 
 
@@ -247,7 +246,7 @@ abstract = {Prediction interval of wind power (PIWP) is crucial to assessing the
 }
 
 @article{weibullwind,
-title = {Evaluation of wind power production prospective and Weibull parameter estimation methods for Babaurband, Sindh Pakistan},
+title = {Evaluation of wind power production prospective and Weibull parameter estimation methods for {Babaurband, Sindh Pakistan}},
 journal = {Energy Conversion and Management},
 volume = {78},
 pages = {956-967},
@@ -275,9 +274,8 @@ doi = {https://doi.org/10.1016/j.energy.2016.08060}
   title = {ENTSO-E Power Statistics and Transparency Platform},
   year = {2024},
   key = {ENTSO-E Statistical Reports},
-  url = {https://www.entsoe.eu/data/power-stats/},
-  note = {Statistical Reports. Data is published based on aggregations of Transparency Platform data, complying with the Transparency regulation as described in the Detailed Data Description document.}
-}
+  url = {https://www.entsoe.eu/data/power-stats/}
+  }
 
 @ARTICLE{GaussCopula,
   author={Papaefthymiou, George and Kurowicka, Dorota},
