--- a/ARTICLE2/template.tex
+++ b/ARTICLE2/template.tex
@@ -1152,8 +1152,8 @@ Figure \ref{fig:opt_time_over_iter} shows the optimization time across iteration
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width=0.5\textwidth]{example-image-a}%{images/iter_time_over_iter.png}
-  \caption{Optimization time over iterations.}
+  \includegraphics[width=0.85\textwidth]{images/opt_time_over_iter.png}%{images/iter_time_over_iter.png}
+  \caption{Solver runtime time over iterations.}
   \label{fig:opt_time_over_iter}
 \end{figure}
 
@@ -1166,7 +1166,12 @@ Figure \ref{fig:opt_time_over_iter} shows the optimization time across iteration
 
 
 
-
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.85\textwidth]{images/mhte.png}%{images/iter_time_over_iter.png}
+  \caption{Iteration time over iterations.}
+  \label{fig:iter_time_over_iter}
+\end{figure}
 
 
 %=================================================================================================================================================================================================================================================================================================================
@@ -1677,7 +1682,7 @@ Since \(\rowW_{R^{(C)}} \rho_{R^{(C)}} = 1\), we have
 
 We now define the hypergraph associated to the aggregation \((\rowP, \colP)\).
 \begin{definition}
-  The \emph{hypergraph associated to the aggregation \((\rowP, \colP)\)} is the hypergraph \(\cN, \cE\) having as nodes the aggregated variables \(\cN \coloneqq \colP_{>1}\) and as edges the subsest of \(\cN\) that appear together in aggregated constraints.
+  The \emph{hypergraph associated to the aggregation \((\rowP, \colP)\)} is the hypergraph \(\cN, \cE\) having as nodes the unaggregated variables in  \(\cN \coloneqq \colP_{>1}\) and as edges the subsest of \(\cN\) that appear together in constraints in \(\rowP_{>1}\).
 \end{definition}
 
 When two edges (constraints) in the hypergraph, \(r\) and \(r'\), share aggregated variables, 
